--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jabir Nayan - Portfolio</title>
+    <title>Shajib Mohammad Saifullah - Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="images/index.jpg" alt="Shajib Mohammad Saifullah" class="profile-img mt-4 mt-md-0">
+                    <img src="" alt="Shajib Mohammad Saifullah" class="profile-img mt-4 mt-md-0">
                 </div>
             </div>
         </div>
