--- a/index.html
+++ b/index.html
@@ -318,29 +318,15 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="project-card">
-                        <h3>Doodle Game</h3>
-                        <p>A simple browser-based platformer game where a doodle character jumps on platforms and tries to survive as long as possible.</p>
-                        <a href="https://github.com/JHNayan23/doodle-game" target="_blank" class="btn btn-primary">
-                            <i class="fab fa-github"></i> View on GitHub
-                        </a>
+                        <h3>E-Commerce apps</h3>
+                        <p>I have built a fully functional e-commerce mobile application using flutter and android studio</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="project-card">
-                        <h3>Algorithm Visualizer</h3>
-                        <p>An interactive visualizer that demonstrates sorting and pathfinding algorithms, aimed at helping learners understand algorithm behavior.</p>
-                        <a href="https://github.com/JHNayan23/vs-algo" target="_blank" class="btn btn-primary">
-                            <i class="fab fa-github"></i> View on GitHub
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="project-card">
-                        <h3>Bluetooth-Controlled Wheelchair (Arduino)</h3>
-                        <p>A custom-built wheelchair controlled via smartphone Bluetooth signals, using Arduino and motor driver modules.</p>
-                        <a href="https://github.com/JHNayan23/Bluetooth_C_W" target="_blank" class="btn btn-primary">
-                            <i class="fab fa-github"></i> View on GitHub
-                        </a>
+                        <h3>Banking Management System</h3>
+                        <p>A software project that simulates core banking operations.</p>
+                        
                     </div>
                 </div>
             </div>
