--- a/index.html
+++ b/index.html
@@ -254,7 +254,6 @@
                             <div data-mode="light" id="light-mode" class="theme-dot"></div>
                             <div data-mode="blue" id="blue-mode" class="theme-dot"></div>
                             <div data-mode="green" id="green-mode" class="theme-dot"></div>
-                            <div data-mode="purple" id="purple-mode" class="theme-dot"></div>
                         </div>
                         <p class="small">*Theme settings will be saved for your next visit</p>
                     </div>
@@ -275,9 +274,9 @@
                 </div>
                 <div class="col-lg-6 mt-4 mt-lg-0">
                     <h1>About Me</h1>
-                    <p>I am Shajib Mohammad Saifullah, an aspiring software engineer with a passion for coding and creative problem solving. I enjoy learning new technologies and applying them to build innovative projects.</p>
+                    <p>I am Shajib Mohammad Saifullah, an aspiring software engineer currently studying in the Department of Information and Communication Technology(ICT) at Mawlana Bhashani Science and Technology University. I enjoy learning new technologies and applying them to build innovative projects.</p>
                     <p>With a strong foundation in computer science and experience in competitive programming, I aim to grow continuously and contribute to impactful software solutions.</p>
-                    <p>When not coding, I like to explore new ideas, work on side projects, and engage with developer communities.</p>
+                    <p> I like to explore new ideas, work on side projects, and engage with developer communities.</p>
                 </div>
             </div>
         </div>
