--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         }
 
         #dot-1 { background-color: #FC6058; }
-        #dot-2 { background-color: #FEC02F; }
-        #dot-3 { background-color: #2ACA3E; }
+       /* #dot-2 { background-color: #FEC02F; }
+        #dot-3 { background-color: #2ACA3E; }*/
 
         .nav-link.active {
             color: var(--accentColor) !important;
@@ -181,7 +181,7 @@
             --accentHover: #138496;
         }
 
-        .blue-theme {
+       /* .blue-theme {
             --mainColor: #15202B;
             --secondaryColor: #192734;
             --borderColor: #164D56;
@@ -209,7 +209,7 @@
             --secondaryText: #eeeeee;
             --accentColor: #8534a3;
             --accentHover: #6a2985;
-        }
+        }*/
     </style>
 </head>
 <body>
@@ -244,7 +244,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6 text-center text-md-start">
                     <h1>Hi, I'm Shajib Mohammad Saifullah</h1>
-                    <p class="lead">Aspiring Software Engineer • Creative Thinker • Code Enthusiast</p>
+                    <p class="lead">Aspiring Software Engineer </p>
                     <div class="mt-4">
                         <h5>Personalize Theme</h5>
                         <div id="theme-options">
